--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "dev": "node app.js"
+    "dev": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +13,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "googleapis": "^105.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.22"
   }
 }
